# hascala

./: Main.hs  README.md  flake.nix  hascala.cabal
src/Scala/: Foldable.hs  Monoid.hs  Semigroup.hs  Semiring.hs
